--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     {% load static %}
     <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    {% block extra_css %}{% endblock %}
 </head>
 <body>
     <nav>
@@ -47,5 +48,7 @@
         
         {% block content %}{% endblock %}
     </main>
+    
+    {% block extra_js %}{% endblock %}
 </body>
 </html>
