--- a/templates/mobile_base.html
+++ b/templates/mobile_base.html
@@ -7,6 +7,7 @@
     {% load static %}
     <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
     <link rel="stylesheet" href="{% static 'mobile_style.css' %}">
+    {% block extra_css %}{% endblock %}
 </head>
 <body>
     <!-- Mobile Navigation -->
@@ -106,5 +107,7 @@
             document.body.classList.remove('menu-open');
         });
     </script>
+    
+    {% block extra_js %}{% endblock %}
 </body>
 </html>
